# s2.cpp

./: CMakeLists.txt
cmake/: apply_local_patches.cmake
patches/: ggml-conv-transpose-1d-grid-fix-loop-fix.patch
src/: main.cpp  s2_export_api.cpp
